[gd_scene load_steps=6 format=3 uid="uid://cerariugi700o"]

[ext_resource type="Script" uid="uid://1jcw50iassid" path="res://scenes/word_builder/word_builder.gd" id="1_b2vsm"]
[ext_resource type="Texture2D" uid="uid://b5d6cyjv0hplq" path="res://assets/prototyping/default-framing.png" id="2_8jq4x"]
[ext_resource type="PackedScene" uid="uid://bymrqbk1dvbjv" path="res://prefabs/word_bank/word_bank.tscn" id="4_8jq4x"]
[ext_resource type="Texture2D" uid="uid://cveejf37js506" path="res://icon.svg" id="4_b2vsm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7nyya"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_b2vsm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Word Builder" type="Control" node_paths=PackedStringArray("word_bank", "selection_speaker")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
script = ExtResource("1_b2vsm")
word_bank = NodePath("Word Bank")
selection_speaker = NodePath("Selection Speaker")
metadata/_edit_use_anchors_ = true

[node name="BackgroundReference" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_8jq4x")

[node name="Current Phoneme Choice" type="AnimatedSprite2D" parent="."]
position = Vector2(967, 345)
scale = Vector2(3.18216, 3.26333)
sprite_frames = SubResource("SpriteFrames_7nyya")

[node name="Progress Through Selections" type="AnimatedSprite2D" parent="."]
position = Vector2(955, 63)
scale = Vector2(4.44585, 0.416008)
sprite_frames = SubResource("SpriteFrames_7nyya")

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.997
offset_top = -1.0
offset_right = -1.0
offset_bottom = 0.159973

[node name="Previous Sound" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 67.0
offset_top = 97.0
offset_right = 227.0
offset_bottom = 128.0
text = "PREVIOUS SOUND"

[node name="Next Sound" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 432.0
offset_top = 98.0
offset_right = 558.0
offset_bottom = 129.0
text = "NEXT SOUND"

[node name="Play Sound" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 266.0
offset_top = 562.0
offset_right = 375.0
offset_bottom = 593.0
text = "PLAY SOUND"

[node name="Play Whole Word" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 240.0
offset_top = 599.0
offset_right = 402.0
offset_bottom = 630.0
text = "PLAY WHOLE WORD"

[node name="Delete" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 58.0
offset_top = 643.0
offset_right = 184.0
offset_bottom = 674.0
text = "DELETE SOUND"

[node name="Done" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 491.0
offset_top = 643.0
offset_right = 545.0
offset_bottom = 674.0
text = "DONE"

[node name="Cancel" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 182.0
offset_top = 683.0
offset_right = 458.0
offset_bottom = 714.0
text = "CANCEL AND QUIT TO MAIN MENU"

[node name="Selection Speaker" type="AudioStreamPlayer" parent="."]

[node name="Word Bank" parent="." instance=ExtResource("4_8jq4x")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Buttons/Previous Sound" to="." method="_on_previous_sound_pressed"]
[connection signal="pressed" from="Buttons/Next Sound" to="." method="_on_next_sound_pressed"]
[connection signal="pressed" from="Buttons/Play Sound" to="." method="_on_play_sound_pressed"]
[connection signal="pressed" from="Buttons/Play Whole Word" to="." method="_on_play_whole_word_pressed"]
[connection signal="pressed" from="Buttons/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Buttons/Done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="Buttons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="finished" from="Selection Speaker" to="." method="_on_selection_speaker_finished"]
